# GroveCoder

./: .gitignore  AGENT.md  README.md  TODOS.md  eslint.config.js  grove-coder-spec.md  package-lock.json  package.json  pyproject.toml  secrets_template.json
.github/: grovecoder.yml
.github/workflows/: grovecoder.yml
AgentUsage/templates/: .env.example  secrets_template.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  TODO.md  TOOLS.md  grovecoder-kickoff.md  grovecoder-spec-addendum.md  grovecoder-spec.md
scripts/: cost_report.py
src/: index.ts
src/agent/: index.ts  loop.ts  parser.ts  prompt.ts  safety.ts  types.ts
src/claude/: client.ts  index.ts  messages.ts  types.ts
src/config/: index.ts  loader.ts  types.ts
src/github/: client.ts  types.ts
src/grove_coder/: __init__.py  config.py  database.py  deepseek.py  server.py
src/llm/: claude.ts  factory.ts  index.ts  interface.ts  kimi.ts  types.ts
src/tests/: test_config.py  test_database.py  test_deepseek.py  test_server.py
src/tools/: definitions.ts  file-ops.ts  github-api.ts  human-help.ts  index.ts  search.ts  shell.ts  web-fetch.ts
src/triggers/: actions.ts
src/utils/: another-messy-file.ts  errors.ts  index.ts  logger.ts  messy-helper.ts  retry.ts
tests/agent/: loop.test.ts  parser.test.ts  safety.test.ts
tests/config/: loader.test.ts
tests/fixtures/: sample-review.ts
tests/llm/: factory.test.ts
tests/tools/: shell.test.ts  web-fetch.test.ts
